@@ -1,32 +1,6 @@
 module Lobbyist
   class EmailInvitation < Lobbyist::Base
     
-    attr_accessor :id, :contact_id, :status, :attempts, :max_attempts, :created_at, :updated_at, :email_key, :accessed_at
-
-    def company
-      @company
-    end
-    
-    def company=(attributes)
-      @company = Company.new(attributes)
-    end
-
-    def contact
-      @contact
-    end
-    
-    def contact=(attributes)
-      @contact = Contact.new(attributes)
-    end
-    
-    def review
-      @review
-    end
-    
-    def review=(attributes)
-      @review = Review.new(attributes)
-    end
-    
     def self.list(params = {})
       create_collection_from_response(get('/v1/email_invitations.json', params))
     end
@@ -35,8 +9,8 @@ module Lobbyist
       create_from_response(get("/v1/email_invitations/#{id}.json"))
     end
     
-    def self.create(params = {})
-      create_from_response(post("/v1/email_invitations.json", {'email_invitation' => params}))
+    def self.create(company_id, params = {})
+      create_from_response(post("/v1/email_invitations.json", {'company_id' => company_id, 'email_invitation' => params}))
     end
     
     def self.update(id, params = {})
@@ -46,10 +20,5 @@ module Lobbyist
     def self.find_by_email_key(email_key, params={})
       create_from_response(get("/v1/email_invitations/find_by_email_key/#{email_key}.json"))
     end
-
-    # def self.destroy(id)
-    #   create_from_response(delete("/v1/email_invitations/#{id}.json"))
-    # end
-    
   end
 end
