@@ -1,3 +1,6 @@
+* Adding company id parameter for CustomerCall, EmailInvitation and Contact create calls.
+* Removed the syndicate attribute from the Company proxy model.
+
 === 0.3.37 2013-10-03
 
 * Fixed unauthorized exception creation edge case when no message is sent from the server.
